--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^12.3.1",
     "bcryptjs": "^2.4.3",
+    "build": "^0.1.4",
     "mongodb": "^4.0.1",
-    "next": "11.1.1",
+    "next": "^11.1.4",
     "next-auth": "^3.27.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "start": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "7.32.0",
